<?php

namespace user;

class Admin {
    
    /**
     * @var \controller\AdminController 
     */
    private $adminController;
    
    /**
     * @var string
     */
    private $login;
}