<?php

namespace user;

class Mentor {
    
    /**
     * @var \controller\MentorController
     */
    private $mentorController;
    
    /**
     * @var string
     */
    private $login;
}