@startuml

class Document <<Документ>> {
    - id_document
    - resources 
    - keywords[]
    + getResourceByTag(tag) 
}

class Resources <<Ресурсы>>  {
    - resources[]
    + getResource(tag)
}

class Resource <<Ресурс>> {
    - tag
    - is_read
}

class Subscribtion <<Подписка>> {
    - user
    - document
}

class Subscribtions <<Подписки>> {
    - subscriptions[]
    + getSubscriptions()
    + getSubscribe(user)?
    + getSubscriptionsByUsers(users[])
}

class Admin <<Администратор>> {
    - login
}

class AdminActions <<Действия админа>> {
    - catalog
    - subscriptions
    - admin
    + createDocument(text)
    + editDocument(id_doc, text)
    + deleteDocument(id_doc)
    + subscribe(users[], document)
}

class Catalog <<Каталог>> {
    - docs[]
    + getDocs()
    + getDocument(id)
}

class UserActions <<Действия пользователя>> {
    - catalog
    - subscriprions
    - user
    + searchTag(keyWord)
    + getSubscribeDocuments()
}

class User <<Пользователь>>{
    - login 
}

class Mentor <<Наставник>> {
    - subscriptions
}

class MentorActions <<действия наставника>> {
    - mentor
    
}

class Report {
    - name
    - resources
    + createReport()
}

class WatcherSubscribtions {
    - notification
    + notification(elemntDiv)
    - getId(tag)
    - getText(tag)  
} 

class Notification {
    - subscribtions
    + notify(idDoc, textNotificate)
    + sendNotification(user, textNotification)
}

class Adapter <<Адаптер>> {
    - foundElements
    - source
    + __construct(source)
    - getSource()
    + getElements(tag, attribute)
}

Resources o-- Resource
Document o-- Resources
Catalog o-- Document
Catalog o-- Adapter
Document o-- Adapter
AdminActions o-- Catalog
Admin --o AdminActions
AdminActions o-- Subscribtions
AdminActions o-- WatcherSubscribtions
WatcherSubscribtions o-- Notification
Notification o-- Subscribtions
Subscribtions o-- Subscribtion
Subscribtion o-- User
Subscribtion o-- Document
Subscribtion o-- Mentor
User --o UserActions
UserActions o-- Catalog
UserActions o-- Subscribtions
MentorActions o-- Mentor
MentorActions o-- Subscribtions
MentorActions o-- Report
AdminActions o-- Report
UserActions --|> MentorActions
@enduml
